[gd_scene load_steps=3 format=3 uid="uid://dm4woahvtnyyt"]

[ext_resource type="Texture2D" uid="uid://c38kb2kvu000w" path="res://icon.svg" id="1_ccxak"]
[ext_resource type="Script" path="res://scenes/ui/car_interaction_menu/car_interaction_menu.gd" id="1_lk5si"]

[node name="CarInteractionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lk5si")

[node name="Submenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="Control" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Panel" type="Panel" parent="MarginContainer/Control/MarginContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control/MarginContainer"]
layout_mode = 2

[node name="Top" type="Control" parent="MarginContainer/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ManufactureModelLabel" type="Label" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Top"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "CAR MANUFACTURER - CAR MODEL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Top"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="BackButton" type="Button" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Top/Buttons"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
text = "<"

[node name="CloseButton" type="Button" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Top/Buttons"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
text = "X"

[node name="Center" type="Control" parent="MarginContainer/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CarPreview" type="Control" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CarPreview"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CarPreview" type="TextureRect" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CarPreview/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 9.74
texture = ExtResource("1_ccxak")

[node name="SetActiveCarButton" type="Button" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CarPreview/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "\"SET AS ACTIVE CAR\" BUTTON"

[node name="CustomizationPart" type="Control" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="OptionsGrid" type="GridContainer" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 30
columns = 3

[node name="CustomizationOptionButton" type="Button" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart/MarginContainer/VBoxContainer/VBoxContainer/OptionsGrid"]
clip_contents = true
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart/MarginContainer/VBoxContainer/VBoxContainer/OptionsGrid/CustomizationOptionButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionName" type="Label" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart/MarginContainer/VBoxContainer/VBoxContainer/OptionsGrid/CustomizationOptionButton/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "ENGINE"
horizontal_alignment = 1

[node name="OptionPreviewTexture" type="TextureRect" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart/MarginContainer/VBoxContainer/VBoxContainer/OptionsGrid/CustomizationOptionButton/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_ccxak")

[node name="CustomizationOptionButton2" type="Button" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart/MarginContainer/VBoxContainer/VBoxContainer/OptionsGrid"]
clip_contents = true
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart/MarginContainer/VBoxContainer/VBoxContainer/OptionsGrid/CustomizationOptionButton2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionName" type="Label" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart/MarginContainer/VBoxContainer/VBoxContainer/OptionsGrid/CustomizationOptionButton2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "TRANSMISSION"
horizontal_alignment = 1

[node name="OptionPreviewTexture" type="TextureRect" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart/MarginContainer/VBoxContainer/VBoxContainer/OptionsGrid/CustomizationOptionButton2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_ccxak")

[node name="CustomizationOptionButton3" type="Button" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart/MarginContainer/VBoxContainer/VBoxContainer/OptionsGrid"]
clip_contents = true
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart/MarginContainer/VBoxContainer/VBoxContainer/OptionsGrid/CustomizationOptionButton3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionName" type="Label" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart/MarginContainer/VBoxContainer/VBoxContainer/OptionsGrid/CustomizationOptionButton3/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "COLOR"
horizontal_alignment = 1

[node name="OptionPreviewTexture" type="TextureRect" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart/MarginContainer/VBoxContainer/VBoxContainer/OptionsGrid/CustomizationOptionButton3/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_ccxak")

[node name="CustomizationOptionButton4" type="Button" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart/MarginContainer/VBoxContainer/VBoxContainer/OptionsGrid"]
clip_contents = true
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart/MarginContainer/VBoxContainer/VBoxContainer/OptionsGrid/CustomizationOptionButton4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionName" type="Label" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart/MarginContainer/VBoxContainer/VBoxContainer/OptionsGrid/CustomizationOptionButton4/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "WEIGHT"
horizontal_alignment = 1

[node name="OptionPreviewTexture" type="TextureRect" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart/MarginContainer/VBoxContainer/VBoxContainer/OptionsGrid/CustomizationOptionButton4/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_ccxak")

[node name="CustomizationOptionButton5" type="Button" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart/MarginContainer/VBoxContainer/VBoxContainer/OptionsGrid"]
clip_contents = true
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart/MarginContainer/VBoxContainer/VBoxContainer/OptionsGrid/CustomizationOptionButton5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionName" type="Label" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart/MarginContainer/VBoxContainer/VBoxContainer/OptionsGrid/CustomizationOptionButton5/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "NITROUS"
horizontal_alignment = 1

[node name="OptionPreviewTexture" type="TextureRect" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart/MarginContainer/VBoxContainer/VBoxContainer/OptionsGrid/CustomizationOptionButton5/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_ccxak")

[node name="CustomizationOptionButton6" type="Button" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart/MarginContainer/VBoxContainer/VBoxContainer/OptionsGrid"]
clip_contents = true
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart/MarginContainer/VBoxContainer/VBoxContainer/OptionsGrid/CustomizationOptionButton6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionName" type="Label" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart/MarginContainer/VBoxContainer/VBoxContainer/OptionsGrid/CustomizationOptionButton6/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "WHEELS"
horizontal_alignment = 1

[node name="OptionPreviewTexture" type="TextureRect" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart/MarginContainer/VBoxContainer/VBoxContainer/OptionsGrid/CustomizationOptionButton6/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_ccxak")

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="Panel" type="Panel" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart/MarginContainer/VBoxContainer/MarginContainer2/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart/MarginContainer/VBoxContainer/MarginContainer2/Panel/MarginContainer"]
layout_mode = 2

[node name="TopSpeedLabel" type="Label" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart/MarginContainer/VBoxContainer/MarginContainer2/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "TOP SPEED"
vertical_alignment = 1

[node name="AccelerationLabel" type="Label" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart/MarginContainer/VBoxContainer/MarginContainer2/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "ACCELERATION"
vertical_alignment = 1

[node name="Label3" type="Label" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart/MarginContainer/VBoxContainer/MarginContainer2/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Text"
vertical_alignment = 1

[node name="Label4" type="Label" parent="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CustomizationPart/MarginContainer/VBoxContainer/MarginContainer2/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Text"
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/Control/MarginContainer/VBoxContainer/Top/Buttons/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="MarginContainer/Control/MarginContainer/VBoxContainer/Center/HBoxContainer/CarPreview/VBoxContainer/SetActiveCarButton" to="." method="_on_set_active_car_button_pressed"]
